frontends/default/stylesheets/stylesheet.css
/* ... */
.active-scaffold input.text-input,
.active-scaffold select {
font: bold 16px arial;
letter-spacing: -1px;
border: solid 1px #1F7F00;
}

.active-scaffold input.text-input {
padding: 2px;
}

.active-scaffold select {
padding: 1px;
}

.active-scaffold input.example {
color: #aaa;
}

.active-scaffold select:focus,
.active-scaffold input.text-input:focus {
background-color: #ffc;
}

.active-scaffold textarea {
height: 65px;
font-family: Arial, sans-serif;
font-size: 12px;
padding: 1px;
border: solid 1px #1F7F00;
}

.active-scaffold .checkbox-list {
height: 90px;
overflow: auto;
padding: 2px;
border: 1px solid #666;
}

/* Form :: Sub-Sections
   ============================== */

.active-scaffold li.sub-section {
clear: left;
margin-bottom: 5px;
}

/* Form :: Association Sub-Forms
   ============================== */

.active-scaffold .sub-form {
float: left;
clear: left;
margin-bottom: 5px;
padding-left: 5px;
}

.active-scaffold .sub-form h5 {
margin-left: -5px;
}

.active-scaffold .sub-form table,
.active-scaffold .sub-form table td {
width: auto;
background: none;
}

.active-scaffold .sub-form table th {
font: normal 10px verdana, sans-serif;
color: #555;
padding: 0 5px 0 1px;
background: none;
}

.active-scaffold .sub-form label {
display: none;
}

.active-scaffold .sub-form .checkbox-list label {
display: block;
}

.active-scaffold .sub-form table td {
border: none;
background-color: none;
padding: 1px;
vertical-align: top;
color: #999;
}

.active-scaffold .sub-form table td input,
.active-scaffold .sub-form table td select {
background-color: #B8FF9F;
}

.active-scaffold .sub-form table .association-record-new td select,
.active-scaffold .sub-form table .association-record-new td input {
background-color: #fff;
}

.active-scaffold .sub-form table .association-record td input:focus {
background-color: #ffc;
}

.active-scaffold .sub-form table td.actions {
vertical-align: middle;
background-color: transparent;
}

.active-scaffold .sub-form .association-record a.destroy {
font-weight: bold;
display: block;
height: 16px;
padding: 0;
width: 16px;
text-indent: -4000px;
background: url(../../../images/active_scaffold/default/cross.png) 0 0 no-repeat;
}

.active-scaffold .sub-form .locked a.destroy {
display: none;
}

.active-scaffold .sub-form a {
font-weight: bold;
font-size: 10px;
}

.active-scaffold .sub-form input.text-input,
.active-scaffold .sub-form select {
letter-spacing: 0;
font: bold 12px arial;
}

.active-scaffold .sub-form .footer-wrapper {
margin-top: 3px;
margin-right: 10px;
background-color: #B8FF9F;
}

.active-scaffold .sub-form .footer {
color: #999;
padding: 3px 5px;
}

.active-scaffold .sub-form .footer select,
.active-scaffold .sub-form .footer input {
font-weight: bold;
font-size: 12px;
padding: 0;
}

